# rebook

./: .gitignore  .pre-commit-config.yaml  README.md  commitlint.config.js  docker-compose.yml  docker-compose_bdd.yml  docker-compose_dev.yml  docker-compose_prod.yml  ecoboard.sql  package-lock.json  pyproject.toml  run.sh  setup.sh  show_log.sh  tests.sh  variables-prod.env
.env/: back.example.env  front.example.env  variables-back-prod.env  variables-back.env  variables-bdd.env  variables-front-dev.env  variables-front-prod.env
.github/workflows/: commit-actions.yml
api/app/: logging.conf  main.py  pyproject.toml
api/config/: .env.example  Dockerfile  requirements.txt
assets/: graphical_charter.md
backend/: package-lock.json  package.json
backend/config/: database.js  server.js
config/: .env.example  compose_dev.sh  docker-compose.override.dev.yml  docker-compose.yml
deploy/: Dockerfile  docker-compose-dev-override.yml  docker-compose.yml  env  env.example
frontend/: Dockerfile  Dockerfile-front-prod  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.js
frontend/src/Router/: Router.js
frontend/src/Styles/: Header.css  index.css
rebook/: db.sqlite3  manage.py
rebook/accounts/: context_processors.py  forms.py  models.py  urls.py  views.py
rebook/accounts/migrations/: 0001_initial.py
rebook/app/: admin.py  models.py  tests.py  urls.py  views.py
rebook/app/migrations/: 0001_initial.py
rebook/books/: models.py
rebook/books/migrations/: 0001_initial.py  0002_alter_book_created_at.py  0003_remove_book_created_at_remove_book_images_and_more.py
rebook/chats/: consumers.py  models.py  routing.py  urls.py  views.py
rebook/chats/migrations/: 0001_initial.py  0002_alter_chat_purchaser.py  (+2 more)
rebook/posts/: admin.py  forms.py  models.py  urls.py  views.py
rebook/rebook/: asgi.py  settings.py  urls.py  wsgi.py
rebook/templates/: base.html  home.html
sass/: base.scss
sass/imports/: constants.scss  reset.scss
sass/src/: base.scss
(+59 files in other folders)
