[project]
name = "Rebook"
description = "API of Rebook"
authors = [
  { name = "AureProd", email = "aureprod0@gmail.com" },
]

[tool.flake8]
max-line-length = 150
docstring-convention = "google"
ignore = ["W291", "E302", "W292", "E265", "E251", "E305", "W503", "W293", "E261", "D104"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
strict_optional = true
disable_error_code = "attr-defined"
